--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div class="info">Hover over any mustang to explore student engagement data for different group sizes.</div>
 
   <script>
+    let dataArt;
+
     function setup() {
       createCanvas(windowWidth, windowHeight);
       colorMode(HSB, 360, 100, 100, 1);
@@ -58,9 +60,9 @@
           { groupRange: "70+", avgTotal: 79.0, avgActive: 7.0, activeRatio: 8.4 }
         ];
         
-        // SMU colors
-        this.smuRed = [0, 80, 90]; // HSB equivalent of SMU red
-        this.smuBlue = [220, 80, 90]; // HSB equivalent of SMU blue
+        // SMU colors (in HSB format)
+        this.smuRed = [0, 80, 90]; 
+        this.smuBlue = [220, 80, 90];
         
         this.mustangs = [];
         this.students = [];
