--- a/index.html
+++ b/index.html
@@ -6,30 +6,13 @@
   <title>SMU Mustangs Student Engagement Visualization</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* Additional styling for info box */
-    .info {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      bottom: auto;
-      left: auto;
-      max-width: 350px;
-    }
-    
-    .title {
-      font-size: 28px;
-    }
-    
-    .subtitle {
-      font-size: 18px;
-    }
-  </style>
 </head>
 <body>
-  <div class="title">SMU Mustangs Engagement</div>
-  <div class="subtitle">Class of 2026: Visualizing campus involvement through Mustang spirit</div>
-  <div class="info">Hover over any mustang to explore student engagement data for different group sizes.</div>
+  <div class="info-container">
+    <div class="title">SMU Mustangs Engagement</div>
+    <div class="subtitle">Class of 2026: Visualizing campus involvement through Mustang spirit</div>
+    <div class="info">Hover over any mustang to explore student engagement data for different group sizes.</div>
+  </div>
 
   <script>
     let dataArt;
