updated title and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="info-container">
     <div class="title">SMU Mustangs Engagement</div>
-    <div class="subtitle">Class of 2026: Visualizing campus involvement through Mustang spirit</div>
+    <div class="subtitle">Class of 2026</div>
     <div class="info">Hover over any mustang to explore student engagement data for different group sizes.</div>
   </div>
 
