--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SMU Mustangs Student Engagement Visualization</title>
+  <title>SMU Mustangs Student Engagement Comparison</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="info-container">
-    <div class="title">SMU Mustangs Engagement</div>
-    <div class="subtitle">Class of 2025</div>
-    <div class="info">Hover over any mustang to explore student engagement data for different group sizes.</div>
+  <div class="main-container">
+    <div class="header-container">
+      <h1 class="main-title">SMU Mustangs Engagement Comparison</h1>
+      <div class="class-selector">
+        <button id="view-both" class="active">Both Classes</button>
+        <button id="view-2025">Class of 2025</button>
+        <button id="view-2026">Class of 2026</button>
+      </div>
+      <div class="main-info">Hover over any mustang to explore student engagement data for different group sizes.</div>
+    </div>
+    
+    <div class="visualizations-container">
+      <div id="viz-2025" class="visualization">
+        <div class="info-container">
+          <div class="title">Class of 2025</div>
+        </div>
+      </div>
+      
+      <div id="viz-2026" class="visualization">
+        <div class="info-container">
+          <div class="title">Class of 2026</div>
+        </div>
+      </div>
+    </div>
   </div>
-
+  
   <script src="script.js"></script>
 </body>
 </html>
