--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="main-info">Hover over any mustang to explore student engagement data for different group sizes.</div>
     </div>
     
-    <div class="visualizations-container">
+    <div class="visualizations-container" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;">
       <div id="viz-2025" class="visualization">
         <div class="info-container">
           <div class="title">Class of 2025</div>
