--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SMU Mustangs Student Engagement Comparison</title>
+  <title>SMU Community Network Engagement</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="main-container">
     <div class="header-container">
-      <h1 class="main-title">SMU Mustangs Engagement Comparison</h1>
+      <h1 class="main-title">SMU Community Network Engagement</h1>
       <div class="class-selector">
         <button id="view-both" class="active">Both Classes</button>
         <button id="view-2025">Class of 2025</button>
         <button id="view-2026">Class of 2026</button>
       </div>
-      <div class="main-info">Hover over any mustang to explore student engagement data for different group sizes.</div>
+      <div class="main-info">Hover over any mustang to explore community network engagement data across different group sizes.</div>
+ 14, 0.8);"></span>
+          Mini Mustangs = Active Groups
+        </span>
+        <span class="legend-item">
+          <span class="legend-color" style="background-color: rgba(204, 0, 53, 0.8);"></span>
+          Horseshoe = Gerald J. Ford Stadium
+        </span>
+      </div>
     </div>
     
     <div class="visualizations-container">
@@ -31,6 +39,10 @@
           <div class="title">Class of 2026</div>
         </div>
       </div>
+    </div>
+    
+    <div class="footer">
+      SMU Community Engagement Visualization © 2025
     </div>
   </div>
   
