updated design theme to incorporate community network

--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
         <button id="view-2025">Class of 2025</button>
         <button id="view-2026">Class of 2026</button>
       </div>
-      <div class="main-info">Hover over any mustang to explore community network engagement data across different group sizes.</div>
- 14, 0.8);"></span>
-          Mini Mustangs = Active Groups
+      <div class="main-info">Hover over any mustang to explore student engagement data across different community networks.</div>
+      <div class="legend">
+        <span class="legend-item">
+          <span class="legend-color" style="background-color: rgba(89, 195, 195, 0.8);"></span>
+          Community Circle = Total Groups
         </span>
         <span class="legend-item">
           <span class="legend-color" style="background-color: rgba(204, 0, 53, 0.8);"></span>
-          Horseshoe = Gerald J. Ford Stadium
+          Connection Nodes = Group Engagement
+        </span>
+        <span class="legend-item">
+          <span class="legend-color" style="background-color: rgba(249, 200, 14, 0.8);"></span>
+          Person Icons = Active Group Members
         </span>
       </div>
     </div>
@@ -39,10 +45,6 @@
           <div class="title">Class of 2026</div>
         </div>
       </div>
-    </div>
-    
-    <div class="footer">
-      SMU Community Engagement Visualization © 2025
     </div>
   </div>
   
