changed color of percentage number so it's easier to read

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </span>
         <span class="legend-item">
           <span class="legend-color" style="background-color: rgba(249, 200, 14, 0.8);"></span>
-          Person Icons = Active Group Members
+          Person Icons = Active Members
+        </span>
+        <span class="legend-item">
+          <span class="legend-color" style="background-color: rgba(255, 255, 255, 0.8);"></span>
+          Percentage = Activity Ratio
         </span>
       </div>
     </div>
