added numerical value for circle size

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div class="legend">
         <span class="legend-item">
           <span class="legend-color" style="background-color: rgba(89, 195, 195, 0.8);"></span>
-          Community Circle = Total Groups
+          Community Circle = Average Total Groups per Student
         </span>
         <span class="legend-item">
           <span class="legend-color" style="background-color: rgba(204, 0, 53, 0.8);"></span>
-          Connection Nodes = Group Engagement
+          Connection Nodes = Active/Inactive Groups
         </span>
         <span class="legend-item">
           <span class="legend-color" style="background-color: rgba(249, 200, 14, 0.8);"></span>
@@ -34,6 +34,9 @@
           <span class="legend-color" style="background-color: rgba(255, 255, 255, 0.8);"></span>
           Percentage = Activity Ratio
         </span>
+      </div>
+      <div class="sub-legend">
+        <span>* Circle size represents the average number of groups per student in each range</span>
       </div>
     </div>
     
