--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SMU Engagement Tapestry</title>
+  
+  <!-- P5.js Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -137,8 +141,8 @@
     </footer>
   </div>
   
-  <script src="script.js"></script>
-  <script src="data-tapestry-fixed.js"></script>
+  <!-- Custom Scripts -->
+  <script src="data-tapestry.js"></script>
   <script src="main-script.js"></script>
 </body>
 </html>
